# Comparisons.Neo4jVSDoublets

./: CLAUDE.md  README.md
.github/workflows/: rust.yml
docs/case-studies/issue-3/: README.md
docs/case-studies/issue-5/: README.md  key-log-entries.txt
rust/: Cargo.toml  out.py
rust/benches/: bench.rs
rust/benches/benchmarks/: create.rs  delete.rs  mod.rs  update.rs
rust/benches/benchmarks/doublets/: create.rs  delete.rs  update.rs
rust/benches/benchmarks/doublets/each/: all.rs  concrete.rs  identity.rs  incoming.rs  mod.rs  outgoing.rs
rust/benches/benchmarks/each/: all.rs  concrete.rs  identity.rs  incoming.rs  mod.rs  outgoing.rs
rust/benches/benchmarks/neo4j/: create.rs  delete.rs  mod.rs  update.rs
rust/benches/benchmarks/neo4j/each/: all.rs  concrete.rs  identity.rs  incoming.rs  mod.rs  outgoing.rs
rust/src/: benched.rs  client.rs  doublets_impl.rs  fork.rs  lib.rs  neo4j_impl.rs  transaction.rs
rust/src/benched/: doublets_benched.rs  mod.rs  neo4j_benched.rs
